# restpy

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
docs/: api.rst  index.rst  installation.rst
src/restpy/: FC.py  __init__.py  mask.py  metrics.py
src/restpy/utils/: __init__.py  logging.py  validation.py
