[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restpy"
version = "0.1.0"
description = "A Python package for resting-state fMRI analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.19",
    "nibabel>=3.0",
    "nilearn>=0.9",
    "scipy>=1.7",
    "numba>=0.55",
] 