[metadata]
name = restpy
version = attr: restpy.__version__
author = Your Name
author_email = your.email@example.com
description = A Python package for resting-state fMRI analysis
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fmri, neuroscience, brain imaging
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19
    nibabel>=3.0
    nilearn>=0.9
    scipy>=1.7
    numba>=0.55

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0
    isort>=5.0
doc =
    sphinx>=4.0
    sphinx-rtd-theme>=1.0 